# AAL-core

./: .gitignore  AAL_CORE_ACRONYM_REGISTRY.md  CANON.md  Claude.md  Makefile  README.md  ROADMAP.md  TODO.md  aal_bus.py  main.py  pyproject.toml  requirements.txt  setup.py  yggdrasil.classify.json  yggdrasil.manifest.json
.aal/: README.md  coupling_map.v0.yaml
.githooks/: pre-commit
TOOLS/: orin_nano_prep.sh  replay.py
aal_core/: __init__.py  api.py  bus.py  config.yaml  hub.py  models.py  utils.py
aal_overlays/: __init__.py  dispatch.py  manifest.py  provenance.py  registry.py
abraxas/: exports.py
abx_runes/: __init__.py  memory_runes.py  ram_stress.py  scheduler_memory_layer.py
alignment_core/: README.md
bus/: __init__.py  overlay_registry.py  phase_policy.py  policy.py  provenance.py  sandbox.py  types.py
docs/: ALIGNMENT.md  BRIDGE_PROMOTION.md  DFD_SPEC.md  PORTFOLIO_OPTIMIZER.md  PROMOTION_INFLUENCE_REPORTING.md  TUNING_PLANE.md  YGGDRASIL.md  runes.md
engines/: __init__.py
examples/: memory_governance_example.py  overlay_call_example.py  yggdrasil_minimal_example.py
modules/: __init__.py
normalizers/: __init__.py  hash.py  loader.py  provenance.py  schema.yaml  types.py  validate.py
policies/: README.md  phase_constraints.yaml
risk/: __init__.py  entropy.py  policy.py  provenance.py  throttle.py
schemas/: evidence_bundle.schema.json  portfolio_tuning_ir.schema.json  yggdrasil_overlay_manifest.schema.json
scripts/: abx_runes_vendor_build.py  bridge_apply.py  bridge_patch_lint.py  bridge_promote.py  bridge_unlockability_lint.py  (+15 more)
(+445 files in other folders)
